# physiscript

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  manage.py  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  physiscript.rst
docs/source/_templates/autoapi/python/: module.rst
docs/source/misc/: colors.rst  index.rst
examples/: demo.py  playground.py
physiscript/: __init__.py
sandbox/: app.py  ui.py
src/physiscript/: __init__.py  app.py  errors.py  ui.py  utils.py
src/physiscript/_internal/: singleton.py
src/physiscript/core/: _window.py  app.py
tests/: test_color.py
